# bootsplash-viewer

./: CMakeLists.txt  PKGBUILD  bootsplash-viewer.c
